# fwf

./: .codeclimate.yml  .envrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: gh-pages.yml
docs/: _config.yml  _toc.yml  api.rst
docs/_templates/: custom-class-template.rst
notebooks/: notebook.ipynb
src/fwf/: __init__.py  __main__.py
