[metadata]
name = fwf
description = Fun applications made with Flax
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Hicham Randrianarivo
author_email = hicham@randrianarivo.net
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
include_package_data = True

[options]
packages = find:
install_requires =
    absl-py
    attrs
python_requires = >=3.9
package_dir =
    =src
zip_safe = True

[options.extras_require]
dev =
    black
    flake8
    flake8-blind-except
    flake8-bugbear
    flake8-comprehensions
    flake8-debugger
    flake8-docstrings
    flake8-isort
    flake8-polyfill
    flake8-pytest
    flake8-quotes
    flake8-typing-imports
    ipdb
    pip-tools
    pre-commit
    yesqa
doc =
    jupyter-book
    sphinx-autodoc-typehints
test =
    hypothesis
    pytest

[flake8]
ignore = D107,D202,D203,D401,E203,E402,E501,W503,D100,D104,D401,W504,RST303,RST304,DAR103,DAR203,D105
max-line-length = 120
exclude = .tox,build,docs/conf.py
strictness = long
show-source = True
max-complexity = 6
docstring-style = google
inline-quotes = double

[mypy]
allow_redefinition = False
check_untyped_defs = True
ignore_errors = False
ignore_missing_imports = True
implicit_reexport = False
local_partial_types = True
strict_optional = True
strict_equality = True
no_implicit_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unreachable = True
warn_no_return = True

[pytype]
exclude =
    docs/
inputs = src/fwf
keep_going = True
jobs = 4
output = .pytype
pythonpath =
    .
python_version = 3.9
report_errors = True
precise_return = True
protocols = False
strict_import = True
enable_bare_annotations = True
strict_parameter_checks = True
enable_nested_classes = True
strict_primitive_comparisons = True
overriding_default_value_checks = True
overriding_parameter_count_checks = True
overriding_parameter_name_checks = True
overriding_parameter_type_checks = False
overriding_return_type_checks = False
